[package]
name = "grailsort"
version = "0.2.0"
authors = ["Dani Jung <dajtg6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.7.3"
criterion = "0.3"

[profile.release]
debug = true

[[bench]]
name = "bufferless_grail"
harness = false
